--- a/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/job-patch/job-createSecret.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/job-patch/job-createSecret.yaml
@@ -68,3 +68,4 @@ spec:
 {{ toYaml .Values.prometheusOperator.admissionWebhooks.patch.securityContext | indent 8 }}
 {{- end }}
 {{- end }}
+{{- end }}
